# BTP

./: .gitignore  CLAUDE.md  README.md  build-linux.sh  compile_commands.json  run_neu_det.sh  test_bbox_fix.sh
.cache/clangd/index/: audio_utils.c.2192B6B05F029342.idx  audio_utils.c.FD0109419CC466F4.idx  audio_utils.h.5334F959E8701F98.idx  audio_utils.h.6BDB3B44736C83A6.idx  common.h.43B000B468ADFC5E.idx  common.h.6DE178C55E5239D9.idx  drmrga.h.30E84CE498F57705.idx  drmrga.h.3CB252BF682A93D3.idx  file_utils.c.2E9D83F92E3080F6.idx  file_utils.c.949AADD0C6F754B1.idx  file_utils.h.A12F05436974B341.idx  file_utils.h.EE52567933C637D0.idx  font.h.4DD3CF6BDB19D8AC.idx  font.h.FA397169CBC22384.idx  im2d.h.BC448F5EB750852F.idx  im2d.h.E1DDC1823C4B8A92.idx  im2d_buffer.h.1AD8061DD3F25C1C.idx  im2d_buffer.h.29BD180D8DA675EE.idx  im2d_common.h.27C621431649534A.idx  im2d_common.h.F222579D88396511.idx  im2d_mpi.h.39A51D533A07C3B4.idx  im2d_mpi.h.BC2CFDC6733563AE.idx  im2d_single.h.04A35CF304E861EB.idx  im2d_single.h.E20AC5EE1D2FD2F2.idx  im2d_task.h.C31021A8B3815F84.idx  im2d_task.h.C60E0DC025010EC4.idx  im2d_type.h.061616AA8A3D02AF.idx  im2d_type.h.F0D889D500CE738B.idx  im2d_version.h.9BFC693C7FED4DDE.idx  im2d_version.h.AD0C79D2C5754A7B.idx  image_drawing.c.B3C868B78ACC9D8E.idx  image_drawing.c.BD8380A60D85FAA3.idx  image_drawing.h.005D13FB7578D011.idx  image_drawing.h.B53FBCBDFE5D3C86.idx  image_utils.c.D0AEB0B86FB92F61.idx  image_utils.c.DB2BF4D87355CDAD.idx  image_utils.h.CD9CD44541E41ECB.idx  image_utils.h.E9222095A54E1771.idx  main.cc.433EB243DF7A596C.idx  main.cc.5C1D2C5E8A3EAE01.idx  (+25 more)
HostPC_DefectRKNN/: CLAUDE.md  CMakeLists.txt  HostPC_DefectRKNN.pro
HostPC_DefectRKNN/include/: camerawindow.h  defect_colors.h  mainwindow.h  statisticsdialog.h
HostPC_DefectRKNN/model/: neu-det_6_labels_list.txt
HostPC_DefectRKNN/src/: camerawindow.cpp  defect_colors.cpp  main.cpp  mainwindow.cpp  statisticsdialog.cpp
rknn_infer/: CMakeLists.txt
rknn_infer/include/: postprocess.h
rknn_infer/src/: main.cc  postprocess.cc
rknn_infer/src/rknpu2/: yolov6.cc
rknn_infer/utils/: file_utils.c  file_utils.h  image_utils.c
